# InFlux

./: .gitignore  LICENSE_VIDEO.md  README.md  pyproject.toml
docs/: README_download.md  README_download_real.md  README_download_synth.md  README_evaluation.md
influx/: README.md
scripts/: download_influx.py  download_influx_real.py  download_influx_synth.py  extract_files.py  extract_tiffs.py  generate_sample_submission.py  influx_pp_synth_unpack.json  make_submission_public.py  modify_submission.py  upload_submission.py  verify_influx_real.py  verify_influx_synth.py
