[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "influx"
dynamic = ["version"]
description = "InFlux and InFlux++: Real and Synthetic Data for Estimating Dynamic Camera Intrinsics"
readme = "README.md"
maintainers = [
    {name = "Erich Liang", email = "el1685@princeton.edu"}
]
license = {file = "LICENSE_CODE.md"}
requires-python = ">=3.10"
dependencies = [
    "requests",
    "requests-toolbelt",
    "tqdm",
    "ffmpeg-python",
    "huggingface-hub[hf-xet]>=0.32.0",
    "cvdpack"
]

[project.optional-dependencies]
dev = [
    "evo",
    "mplcursors",
    "numpy",
    "opencv-contrib-python",
    "matplotlib",
    "scipy",
    "networkx",
    "tqdm",
    "pyqt5",
    "g2o-python",
    "pykalman",
    "OneEuroFilter",
    "filterpy",
    "pyarrow",
    "h5py",
    "pomegranate",
    "requests-toolbelt"
]

[project.urls]
Homepage = "https://influx.cs.princeton.edu/"
Repository = "https://github.com/princeton-vl/InFlux"
Documentation = "https://github.com/princeton-vl/InFlux/tree/main/docs"
"InFlux++ Paper" = "https://arxiv.org/abs/2607.05389"
"InFlux Paper" = "https://arxiv.org/abs/2510.23589"
InFlux-Real = "https://huggingface.co/datasets/princeton-vl/InFlux-Real"
InFlux-Synth = "https://huggingface.co/datasets/princeton-vl/InFlux-Synth"
Leaderboard = "https://influx.cs.princeton.edu/leaderboard"

[project.scripts]
influx-download-real = "scripts.download_influx_real:main"
influx-download-synth = "scripts.download_influx_synth:main"
influx-generate-sample = "scripts.generate_sample_submission:main"
influx-upload = "scripts.upload_submission:main"
influx-make-public = "scripts.make_submission_public:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "influx/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["influx", "scripts"]

[tool.hatch.build.targets.sdist]
include = [
    "influx",
    "scripts",
    "docs",
    "media",
    "README.md",
    "LICENSE_CODE.md"
]